--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,6 @@
+@import "pre_variables";
 @import "../web/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_variables";
-@import "_variables";
+@import "variables";
 
 @import "../web/bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap-compass";
 @import "../web/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
