--- a/scss/_pre_variables.scss
+++ b/scss/_pre_variables.scss
@@ -1,4 +1,4 @@
 // Navbar Color
-$navbar-default-bg:				#3b3a38;
+$navbar-default-bg:				#3a3f41;
 $navbar-default-color:			#fff;
 $navbar-default-brand-color:	#fff;
