Updated navbar account options.

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -70,4 +70,7 @@
 			margin: 0;
 		}
 	}
+	.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
+		max-height: inherit;
+	}
 }
