--- a/scss/_pre_variables.scss
+++ b/scss/_pre_variables.scss
@@ -1,4 +1,9 @@
 // Navbar Color
-$navbar-default-bg:				#3a3f41;
-$navbar-default-color:			#fff;
-$navbar-default-brand-color:	#fff;
+$navbar-default-bg:				   #3a3f41;
+$navbar-default-color:			   #fff;
+$navbar-default-brand-color:	   #fff;
+$navbar-default-link-color:        #fff;
+$navbar-default-link-active-color: #fff;
+$navbar-default-link-active-bg:    #398bce;
+$navbar-default-link-hover-color:  #ddd;
+$navbar-default-toggle-border-color: #666;
