--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,76 @@
-<form action="{{ path('app_login_check') }}" method="post">
-    {{ error }}
-    <input type="text" name="_username" value="{{ last_username }}" />
-    <input type="password" name="_password" value="" />
-    <input type="submit" />
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boxmeup - Login</title>
+    <link href="/favicon.ico" type="image/x-icon" rel="icon">
+    <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon">
+    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
+<!--[if lt IE 9]>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+    <div class="navbar navbar-default navbar-fixed-top" bmu-navbar-collapse>
+        <div class="container">
+            <div class="navbar-header">
+                <a href="/" class="navbar-brand">Boxmeup</a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <h2>Sign In</h2>
+                <form role="form" action="{{ path('app_login_check') }}" method="post">
+                    {% if error %}
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error!</strong> {{ error }}
+                    </div>
+                    {% endif %}
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input id="email" class="form-control input-lg" type="text" name="_username" value="{{ last_username }}" placeholder="john.smith@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password <small><a href="">Forgot?</a></small></label>
+                        <input id="password" class="form-control input-lg" type="password" name="_password" value="">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg" style="width: 100%; margin-top: 20px">Sign In</button>
+                    <p style="margin-top: 15px">Don't have an account? <a href="">Create one!</a></p>
+                </form>
+            </div>
+        </div>
+        <div class="footer navbar-fixed-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-4">
+                        <small><a href="/">Boxmeup</a> Copyright &copy; 2014</small>
+                    </div>
+                    <div class="col-sm-8 hidden-xs">
+                        <div class="pull-right">
+                            <small><a href="/terms">Terms</a>&nbsp;&nbsp;&nbsp;<a href="/privacy">Privacy</a>&nbsp;&nbsp;&nbsp;<a href="http://status.boxmeupapp.com">Status</a>&nbsp;&nbsp;&nbsp;<a href="/developer">API</a></small>
+                        </div>
+                    </div>
+                    <div class="col-xs-8 visible-xs-block">
+                        <div class="btn-group pull-right dropup">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="/terms">Terms</a></li>
+                                <li><a href="/privacy">Privacy</a></li>
+                                <li><a href="/developer">API</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
+</html>
