--- a/scss/login.scss
+++ b/scss/login.scss
@@ -1,8 +1,10 @@
+@import "pre_variables";
 @import "../web/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_variables";
+@import "variables";
+
 @import "../web/bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap-compass";
 @import "../web/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 
-@import "variables";
 @import "main";
 @import "menu";
 @import "footer";
