Some random verbiage updates.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,14 +37,14 @@
 						</ul>
 					</li>
 				</ul>
-				
+
 				<div class="main-navigation sidebar-collapse">
 					<ul class="nav nav-pills nav-stacked">
-						<li><input name="search" autocomplete="off" class="form-control" placeholder="Search" type="text" id="search-query"/></li>
+						<li><input name="search" autocomplete="off" class="form-control" placeholder="Find an item..." type="text" id="search-query"/></li>
 						<li><a href="/app/#/dashboard" ng-click="collapse()"><i class="icon-dashboard" style="margin-right: 15px"></i>Dashboard</a></li>
-						<li><a href="/app/#/containers" ng-click="collapse()"><i class="icon-inbox" style="margin-right: 15px"></i>My Containers</a></li>
-						<li><a href="/app/#/container_items" ng-click="collapse()"><i class="icon-tasks" style="margin-right: 15px"></i>My Items</a></li>
-						<li><a href="/app/#/locations" ng-click="collapse()"><i class="icon-location-arrow" style="margin-right: 15px"></i>My Locations</a></li>
+						<li><a href="/app/#/containers" ng-click="collapse()"><i class="icon-inbox" style="margin-right: 15px"></i>Containers</a></li>
+						<li><a href="/app/#/container_items" ng-click="collapse()"><i class="icon-tasks" style="margin-right: 15px"></i>Items</a></li>
+						<li><a href="/app/#/locations" ng-click="collapse()"><i class="icon-location-arrow" style="margin-right: 15px"></i>Locations</a></li>
 						<li style="border-top:1px solid #ddd"></li>
 						<li class="dropdown-header">Quick Actions</li>
 						<li class="hidden-xs">
